# ai_engineering_henry

./: .gitignore  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  fix_notebooks.py  instalacion.md  patch_paths.py  pyproject.toml  test_all_notebooks.sh  test_notebooks.py
01-Introduction_AI_Engineering/: Makefile  README.md  pyproject.toml
01-Introduction_AI_Engineering/00_python_extra_class/: Makefile  README.md  intro_to_python.py  pyproject.toml
01-Introduction_AI_Engineering/00_python_extra_class/00_setup/: 01_uv_entornos.md  02_flujo_reproducible_make_uv.md  README.md
01-Introduction_AI_Engineering/00_python_extra_class/01_programacion_python/: 02_control_de_flujo.md  04_estructuras_de_datos.md  06_modulos_y_archivos.md  11_logging_patterns.md  (+1 more)
01-Introduction_AI_Engineering/01_fastapi/: .gitignore  pyproject.toml
01-Introduction_AI_Engineering/01_introduction/: README.md
01-Introduction_AI_Engineering/02_prompting/: README.md
01-Introduction_AI_Engineering/03_langchain_prompting/: README.md  blog_agent.py
01-Introduction_AI_Engineering/03_prompting/: README.md
01-Introduction_AI_Engineering/04_langchain_langgraph/: README.md
01-Introduction_AI_Engineering/04_langchain_prompting/: README.md  blog_agent.py  fact_checker_agent.py
01-Introduction_AI_Engineering/05_rags/: README.md
01-Introduction_AI_Engineering/06_project/: README.md  pyproject.toml
01-Introduction_AI_Engineering/06_rags/: README.md
01-Introduction_AI_Engineering/07_project/: pyproject.toml
01-Introduction_AI_Engineering/python_extra_class/: GUIA_DE_DECISIONES.md
02-vector_data_bases/: .env.example  .gitignore  00_clase_de_repaso.ipynb  Makefile  README.md  Readme.md  build_review.py  example.txt  pyproject.toml
02-vector_data_bases/00_tools/: execute_notebooks.py
02-vector_data_bases/01_intro/: 01_tokens.ipynb  01_tokens.py  02_rag_tfidf.ipynb  03_transformers.ipynb  04_text_classification.ipynb  05_rags_vectorial_databases.ipynb  06_agent2agent_literario.ipynb  intro.md
02-vector_data_bases/02_databases/: 01-bases-vectoriales-fundamentos.ipynb  02-bases-vectoriales-produccion.ipynb  03-comparacion-modelos-embeddings-rayuela.ipynb
02-vector_data_bases/03_rag/: 01-rag-fundamentos.ipynb  02-rag-avanzado.ipynb
02-vector_data_bases/04_batman_vector_db_orchestration/: 00_clase_de_repaso.ipynb  01_diseno_vector_db_batman.ipynb  02_rag_vs_agentic_rag_batman.ipynb  03_routing_orquestacion_simple.ipynb  04_ejercicio_agent2agent_batman_rag.ipynb  05_agent2agent_roles_router_batman.ipynb  README.md
02-vector_data_bases/RAG/: 02-rag-avanzado.ipynb
02-vector_data_bases/batman_vector_db_orchestration/: 01_diseno_vector_db_batman.ipynb  02_rag_vs_agentic_rag_batman.ipynb  03_routing_orquestacion_simple.ipynb  04_ejercicio_agent2agent_batman_rag.ipynb  05_agent2agent_roles_router_batman.ipynb  README.md
02-vector_data_bases/databases/: 01-bases-vectoriales-fundamentos.ipynb  02-bases-vectoriales-produccion.ipynb  03-comparacion-modelos-embeddings-rayuela.ipynb
02-vector_data_bases/intro/: 01-tokens.ipynb  01_rag_tfidf.ipynb  02-transformers.ipynb  03-text_classification.ipynb  04-Rags-vectorial_databases.ipynb  06_agent2agent_literario.ipynb
02-vector_data_bases/tools/: execute_notebooks.py
03-agents/: Makefile  README.md  pyproject.toml
03-agents/01_intro/: 01_que_es_un_agente.ipynb  02_workflows_vs_agentes.ipynb  03_costo_latencia_alucinacion.ipynb  04_panorama_agentes_modernos.ipynb  README.md
03-agents/02_langchain/: 01_tool_calling.ipynb  02_routing_condicional.ipynb  03_validacion_salida.ipynb  04_rag_agentico.ipynb  05_flujo_agentico_completo.ipynb  README.md
03-agents/03_multi_agent/: 01_orquestador_workers.ipynb  02-handoffs.ipynb  03-resolucion-conflictos.ipynb  README.md
03-agents/04_production/: 01_timeouts_retries.ipynb  02_fallback_guardrails.ipynb  03_presupuesto_costos.ipynb  04_alertas_calidad.ipynb  README.md
03-agents/05_llmops/: README.md
03-agents/06_project_langgraph/: Makefile  README.md  pyproject.toml
03-agents/99_tests/: conftest.py  test_agent_anatomy.py  test_agentic_rag.py  test_orchestrator.py  test_resilient_agent.py  test_tool_calling.py
03-agents/LLMops/: README.md
03-agents/data/: comics_eval.jsonl
03-agents/intro/: 02-workflows-vs-agentes.ipynb  03-costo-latencia-alucinacion.ipynb  README.md
03-agents/langchain/: 01-tool-calling.ipynb  02-routing-condicional.ipynb  03-validacion-salida.ipynb  04-rag-agentico.ipynb  05-flujo-agentico-completo.ipynb  README.md
03-agents/multi-agent/: 01-orquestador-workers.ipynb  03-resolucion-conflictos.ipynb  README.md
03-agents/production/: 01-timeouts-retries.ipynb  02-fallback-guardrails.ipynb  03-presupuesto-costos.ipynb  04-alertas-calidad.ipynb  README.md
03-agents/tests/: conftest.py  test_agent_anatomy.py  test_agentic_rag.py  test_orchestrator.py  test_resilient_agent.py  test_tool_calling.py
04-deep_learning/: .gitignore  INSTALACION.md  Makefile  README.md  pyproject.toml
04-deep_learning/01_fundamentos_redes_neuronales/: 01_anns_desde_cero.ipynb  README.md
04-deep_learning/02_pytorch_fundamentos/: 01_pytorch_pipeline_entrenamiento.ipynb
04-deep_learning/03_entrenamiento_redes_profundas/: 01_estabilidad_y_regularizacion.ipynb  README.md
04-deep_learning/04_vision_por_computadora_cnns/: 01_cnns_y_reconocimiento_visual.ipynb
04-deep_learning/05_modelado_de_secuencias/: 01_rnns_lstm_gru_y_cnns_temporales.ipynb
04-deep_learning/06_nlp_con_atencion/: 01_nlp_con_atencion_las_mil_y_una_noches.ipynb  README.md
04-deep_learning/07_transformers_y_chatbots/: 01_transformers_y_chat_local.ipynb  README.md
04-deep_learning/scripts/: doctor.py
04-deep_learning/tests/: test_execute_notebooks.py  test_smoke.py  test_text_corpus.py
04-deep_learning/tools/: __init__.py  execute_notebooks.py  notebook_utils.py  text_corpus.py
05-fastapi/: Makefile  README.md  pyproject.toml
05-fastapi/01_fundamentos/: books.py
05-fastapi/02_modelos_pydantic/: books2.py
05-fastapi/07_docker/: Dockerfile  docker-compose.yml
(+533 files in other folders)
