[project]
name = "henry-ai-engineering-foundations"
version = "0.1.0"
description = "Modulo 1 del curso de AI Engineering de Henry"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.60.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "langchain-tavily>=0.2.0",
  "langgraph>=0.4.0",
  "langgraph-checkpoint>=4.0.0",
  "tavily-python>=0.5.0",
  "graphviz>=0.20.1",
  "pillow>=10.0.0",
  "python-dotenv>=1.0.1",
  "nbformat>=5.10.4",
  "nbclient>=0.10.2",
  "nbconvert>=7.16.0",
  "ipykernel>=6.29.5",
  "jupyterlab>=4.2.0",
  "pydantic>=2.8.2",
  "chromadb>=0.5.0",
  "tiktoken>=0.7.0",
  "faiss-cpu>=1.7.4",
  "rank-bm25>=0.2.2",
  "typer>=0.12.5",
  "rich>=13.7.1",
  "tenacity>=8.2.0",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-mock>=3.12.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = [
  "01_introduction/02_ai_engineering/tests",
  "01_introduction/01_python_software_engineering/tests",
  "06_project/tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
