[project]
name = "henry-vector-databases"
version = "0.1.0"
description = "Modulo 2 del curso de AI Engineering de Henry"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.60.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "langgraph>=0.4.0",
  "python-dotenv>=1.0.1",
  "nbformat>=5.10.4",
  "nbclient>=0.10.2",
  "nbconvert>=7.16.0",
  "ipykernel>=6.29.5",
  "jupyterlab>=4.2.0",
  "chromadb>=0.5.0",
  "tiktoken>=0.7.0",
  "faiss-cpu>=1.7.4",
  "huggingface-hub>=0.25.0",
  "transformers>=4.43.0",
  "sentence-transformers>=3.0.0",
  "datasets>=4.5.0",
  "rank-bm25>=0.2.2",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "pillow>=10.0.0",
  "keras>=3.12.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
