[project]
name = "henry-agents-module"
version = "0.1.0"
description = "Modulo 3 de agentes del curso de AI Engineering de Henry"
requires-python = ">=3.13"
dependencies = [
  "openai>=1.60.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-classic>=1.0.0",
  "langgraph>=0.4.0",
  "langgraph-checkpoint>=4.0.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.2",
  "chromadb>=0.5.0",
  "typer>=0.12.5",
  "rich>=13.7.1",
  "tenacity>=8.2.0",
  "nbformat>=5.10.4",
  "nbclient>=0.10.2",
  "nbconvert>=7.16.0",
  "ipykernel>=6.29.5",
  "jupyterlab>=4.2.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "httpx>=0.27.0",
  "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-mock>=3.12.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.8.0",
]

[project.scripts]
llmops-run = "llmops.main:app"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "05_llmops/src"}

[tool.setuptools.packages.find]
where = ["05_llmops/src"]

[tool.pytest.ini_options]
testpaths = [
  "05_llmops/tests",
  "99_tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

