[project]
name = "henry-deep-learning"
version = "0.2.0"
description = "Modulo de Deep Learning ejecutable y reproducible en Henry"
requires-python = ">=3.10,<3.13"
dependencies = [
  "torch>=2.4.0",
  "torchvision>=0.19.0",
  "transformers>=4.45.0",
  "sentencepiece>=0.2.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "scikit-learn>=1.4.0",
  "jupyterlab>=4.2.0",
  "ipykernel>=6.29.5",
  "nbformat>=5.10.4",
  "nbclient>=0.10.2",
  "nbconvert>=7.16.0",
  "pillow>=10.0.0",
  "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["B007", "B905", "E402", "E501", "F401", "I001", "W293"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
